acceptance_tests/invalid_scripts/calling_something_other_than_main_in_lua.erl
[ {make_install,
    [ {git, {var, "mzbench_repo", "git://github.com/machinezone/mzbench"}},
      {branch, "lua-metrics"},
      {dir, "workers/lua"}]},
  {pool,
    [{size, 3},
         {worker_type, lua, lua}],
    [{launch_the_missiles}]}
].